--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <div>
                     <picture>
                         <source media="(max-width: 800px)"
-                            srcset="https://github.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/blob/main/Desafio%20001%20-%20Modulo%202/imagens/dan-droids-pq.png?raw=true">
-                        <img src="https://raw.githubusercontent.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/main/Desafio%20001%20-%20Modulo%202/imagens/dan-droids.png"
+                            srcset="https://github.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/blob/main/imagens/dan-droids-pq.png?raw=true">
+                        <img src="https://github.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/blob/main/imagens/dan-droids.png?raw=true"
                             alt="img-droid">
                     </picture>
                     <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os
