--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Css/style.css" media="all">
+    <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
     <script src="https://c.webfontfree.com/c.js?f=IDroid-Bold" type="text/javascript" defer></script>
     <title>Desafio Modulo - 2</title>
 </head>
@@ -64,8 +65,8 @@
                 <div>
                     <picture>
                         <source media="(max-width: 800px)"
-                            srcset="https://github.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/blob/main/Desafio%20001%20-%20Modulo%202/imagens/dan-droids-pq.png?raw=true">
-                        <img src="https://raw.githubusercontent.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/main/Desafio%20001%20-%20Modulo%202/imagens/dan-droids.png"
+                            srcset="./imagens/dan-droids-pq.png">
+                        <img src="./imagens/dan-droids.png"
                             alt="img-droid">
                     </picture>
                     <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os
@@ -92,8 +93,8 @@
                 <div>
                     <picture>
                         <source media="(max-width: 800px)"
-                            srcset="https://github.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/blob/main/Desafio%20001%20-%20Modulo%202/imagens/irina-blok-pq.jpg?raw=true">
-                        <img src="https://raw.githubusercontent.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/main/Desafio%20001%20-%20Modulo%202/imagens/irina-blok.jpg"
+                            srcset="./imagens/irina-blok-pg.jpg">
+                        <img src="./imagens/irina-blok.jpg"
                             alt="irina-blok.jpg">
                     </picture>
                 </div>
@@ -106,7 +107,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="https://github.com/DanielMMjob/Desafios-Gustavo-Curso_Html_Css/blob/main/Desafio%20001%20-%20Modulo%202/imagens/bugdroid.png?raw=true"
+                    <img src="./imagens/bugdroid.png"
                         alt="bug-droid.jpg">
                 </div>
                 <div>
