--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div>
                     <picture>
                         <source media="(max-width: 800px)"
-                            srcset="./imagens/irina-blok-pg.jpg">
+                            srcset="./imagens/irina-blok-pq.jpg">
                         <img src="./imagens/irina-blok.jpg"
                             alt="irina-blok.jpg">
                     </picture>
